// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfillmentOutboundShipment createFulfillmentOrder returns the standard response elements if succesful 1`] = `
Array [
  "",
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentOutboundShipment getFulfillmentPreview returns a list of fulfillment previews if succesful 1`] = `
Array [
  Object {
    "FulfillmentPreviews": Array [
      Object {
        "EstimatedFees": Array [
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "225",
            },
            "Name": "FBAPerUnitFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "475",
            },
            "Name": "FBAPerOrderFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "660",
            },
            "Name": "FBATransportationFee",
          },
        ],
        "EstimatedShippingWeight": Object {
          "Unit": "kilograms",
          "Value": "12",
        },
        "FulfillmentPreviewShipments": Array [
          Object {
            "EarliestArrivalDate": 2014-01-05T07:00:00.000Z,
            "EarliestShipDate": 2014-01-04T00:30:00.000Z,
            "FulfillmentPreviewItems": Array [
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "10",
                },
                "Quantity": 2,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-2",
                "SellerSKU": "SampleSKU1",
                "ShippingWeightCalculationMethod": "Package",
              },
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "2",
                },
                "Quantity": 1,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-1",
                "SellerSKU": "SampleSKU2",
                "ShippingWeightCalculationMethod": "Package",
              },
            ],
            "LatestArrivalDate": 2014-01-06T06:59:59.000Z,
            "LatestShipDate": 2014-01-04T00:30:00.000Z,
          },
        ],
        "IsCODCapable": false,
        "IsFulfillable": true,
        "MarketplaceId": "ATVPDKIKX0DER",
        "ShippingSpeedCategory": "Expedited",
        "UnfulfillablePreviewItems": Array [],
      },
      Object {
        "EstimatedFees": Array [
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "225",
            },
            "Name": "FBAPerUnitFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "475",
            },
            "Name": "FBAPerOrderFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "660",
            },
            "Name": "FBATransportationFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "315",
            },
            "Name": "FBAFulfillmentCODFee",
          },
        ],
        "EstimatedShippingWeight": Object {
          "Unit": "kilograms",
          "Value": "12",
        },
        "FulfillmentPreviewShipments": Array [
          Object {
            "EarliestArrivalDate": 2014-01-05T07:00:00.000Z,
            "EarliestShipDate": 2014-01-04T00:30:00.000Z,
            "FulfillmentPreviewItems": Array [
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "10",
                },
                "Quantity": 2,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-2",
                "SellerSKU": "SampleSKU1",
                "ShippingWeightCalculationMethod": "Package",
              },
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "2",
                },
                "Quantity": 1,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-1",
                "SellerSKU": "SampleSKU2",
                "ShippingWeightCalculationMethod": "Package",
              },
            ],
            "LatestArrivalDate": 2014-07-09T06:59:59.000Z,
            "LatestShipDate": 2014-01-04T00:30:00.000Z,
          },
        ],
        "IsCODCapable": true,
        "IsFulfillable": true,
        "ShippingSpeedCategory": "Standard",
        "UnfulfillablePreviewItems": Array [],
      },
      Object {
        "EstimatedFees": Array [
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "225",
            },
            "Name": "FBAPerUnitFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "475",
            },
            "Name": "FBAPerOrderFulfillmentFee",
          },
          Object {
            "Amount": Object {
              "CurrencyCode": "JPY",
              "Value": "660",
            },
            "Name": "FBATransportationFee",
          },
        ],
        "EstimatedShippingWeight": Object {
          "Unit": "kilograms",
          "Value": "12",
        },
        "FulfillmentPreviewShipments": Array [
          Object {
            "EarliestArrivalDate": 2014-01-05T07:00:00.000Z,
            "EarliestShipDate": 2014-01-04T00:30:00.000Z,
            "FulfillmentPreviewItems": Array [
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "10",
                },
                "Quantity": 2,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-2",
                "SellerSKU": "SampleSKU1",
                "ShippingWeightCalculationMethod": "Package",
              },
              Object {
                "EstimatedShippingWeight": Object {
                  "Unit": "kilograms",
                  "Value": "2",
                },
                "Quantity": 1,
                "SellerFulfillmentOrderItemId": "mws-test-query-20100713023406723-1",
                "SellerSKU": "SampleSKU2",
                "ShippingWeightCalculationMethod": "Package",
              },
            ],
            "LatestArrivalDate": 2014-01-06T06:59:59.000Z,
            "LatestShipDate": 2014-01-04T00:30:00.000Z,
          },
        ],
        "IsCODCapable": false,
        "IsFulfillable": true,
        "ScheduledDeliveryInfo": Object {
          "DeliveryTimeZone": "Asia/Tokyo",
          "DeliveryWindows": Array [
            Object {
              "EndDateTime": 2014-01-05T03:00:00.000Z,
              "StartDateTime": 2014-01-04T23:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-05T05:00:00.000Z,
              "StartDateTime": 2014-01-05T03:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-05T07:00:00.000Z,
              "StartDateTime": 2014-01-05T05:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-05T09:00:00.000Z,
              "StartDateTime": 2014-01-05T07:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-05T11:00:00.000Z,
              "StartDateTime": 2014-01-05T09:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-05T12:00:00.000Z,
              "StartDateTime": 2014-01-05T11:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T03:00:00.000Z,
              "StartDateTime": 2014-01-05T23:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T05:00:00.000Z,
              "StartDateTime": 2014-01-06T03:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T07:00:00.000Z,
              "StartDateTime": 2014-01-06T05:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T09:00:00.000Z,
              "StartDateTime": 2014-01-06T07:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T11:00:00.000Z,
              "StartDateTime": 2014-01-06T09:00:00.000Z,
            },
            Object {
              "EndDateTime": 2014-01-06T12:00:00.000Z,
              "StartDateTime": 2014-01-06T11:00:00.000Z,
            },
          ],
        },
        "ShippingSpeedCategory": "ScheduledDelivery",
        "UnfulfillablePreviewItems": Array [],
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentOutboundShipment getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentOutboundShipment listAllFulfillmentOrders returns a list of fulfillment orders if succesful 1`] = `
Array [
  Object {
    "FulfillmentOrders": Array [
      Object {
        "DestinationAddress": Object {
          "City": "Seattle",
          "CountryCode": "US",
          "Line1": "123 Oak St.",
          "Line2": "Apt. 321",
          "Name": "Jane Adams",
          "PhoneNumber": "321-098-7654",
          "PostalCode": "98101",
          "StateOrProvinceCode": "WA",
        },
        "DisplayableOrderComment": "Sample comment text.",
        "DisplayableOrderDateTime": 2011-02-05T17:26:56.000Z,
        "DisplayableOrderId": "test_displayable_id",
        "FulfillmentOrderStatus": "PROCESSING",
        "FulfillmentPolicy": "FillOrKill",
        "NotificationEmailList": Array [
          "o8c2EXAMPLsfr7o@marketplace.amazon.com",
        ],
        "ReceivedDateTime": 2011-02-06T17:26:56.000Z,
        "SellerFulfillmentOrderId": "extern_id_1154539615776",
        "ShippingSpeedCategory": "Standard",
        "StatusUpdatedDateTime": 2011-01-28T23:48:48.000Z,
      },
      Object {
        "DestinationAddress": Object {
          "City": "Seattle",
          "CountryCode": "US",
          "Line1": "2345 5th Ave",
          "Name": "George Jones",
          "PhoneNumber": "123-123-4567",
          "PostalCode": "98104",
          "StateOrProvinceCode": "WA",
        },
        "DisplayableOrderComment": "Sample order comment.",
        "DisplayableOrderDateTime": 2011-03-11T18:48:52.000Z,
        "DisplayableOrderId": "test-order-test-1159210132812",
        "FulfillmentOrderStatus": "PLANNING",
        "FulfillmentPolicy": "FillAllAvailable",
        "ReceivedDateTime": 2011-03-03T18:48:53.000Z,
        "SellerFulfillmentOrderId": "external-order-ebaytime1154557376014",
        "ShippingSpeedCategory": "Standard",
        "StatusUpdatedDateTime": 2011-03-05T18:48:53.000Z,
      },
    ],
    "NextToken": NextToken {
      "action": "ListAllFulfillmentOrders",
      "token": "H4sIAAAAAAAAAC2MwQqDMBBEfyXsPXU3ITUEEyjFQ6FWUNt7sbEI
            alH7/3SVwjLLG3iTzeLjoe6n9xAv3ziWyysuIFoPCjGVqCWmDaZOWYckkRNB9B4MgZj
            4MY0euuewRhBxswhZkaQbUk5pZ+iA1nK1m+u+ayXxlmnwyCXffzdkXTiXt/pe5FWWdB
            tWeVE+Ttedkjn8AF4nvJquAAAA",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentOutboundShipment updateFulfillmentOrder returns the standard response elements if succesful 1`] = `
Array [
  "",
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
